opam-version: "2.0"
maintainer: "crispywalrus@gmail.com"
authors: ["Chris Vale"]
license: "GPL3"
homepage: "https://github.com/flyingwalrusllc/ocam-grapherd"
doc: "http://flyingwalrusllc.github.io/ocam-grapherd/"
bug-reports: "https://github.com/flyingwalrusllc/ocam-grapherd/issues"
depends: [
  "ocaml" {>= "4.03"}
  "dune" {build}
  "core"
  "higher"
  "httpaf"
  "httpaf-async"
  "async"
  "libgraph"
  "bisect_ppx"
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
synopsis: "Simple high performance graph engine"

