(library
 (name libgraph)
 (public_name libgraph)
 (inline_tests)
 (modules graph graph_intf growable_array growable_array_intf api api_intf
   assets vertex_intf vertex)
 (preprocess
  (pps ppx_inline_test ppx_compare ppx_jane bisect_ppx -conditional
    -no-comment-parsing))
 (libraries core ppx_deriving.runtime higher psq))

(toplevel
 (name graphtop)
 (libraries libgraph))

(rule
 (targets assets.ml)
 (deps
  (source_tree assets))
 (action
  (run %{bin:ocaml-crunch} -m plain assets -o assets.ml)))
